css/styles.css
/* ... */
body {
  /* Fonts */
  font-family: var(--main-fnt);
  letter-spacing: 0.02em;
  font-size: 16px;
  line-height: 1.5;

  /* Colors */
  background-color: var(--white);
  color: var(--slate);
}

.container {
  max-width: var(--breakpoint-lg);
  padding-left: var(--container-padding);
  padding-right: var(--container-padding);
  margin: 0 auto;
}

/* Reset */

a {
  text-decoration: none;
  color: currentColor;
}

button {
  font-family: inherit;
  outline: none;
  border: none;
  cursor: pointer;
  background-color: var(--iris);
  transition: background-color var(--standard-transition), border var(--standard-transition);
}

ul,
ol {
  padding: 0;
  margin: 0;
  list-style: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
  padding: 0;
}


img {
  display: block;
  max-width: 100%;
  height: auto;
}

svg {
  display: block;
}

address {
  font-style: normal;
}

/* Common */
.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

html {
  overflow-x: hidden;
}

h1 {
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  text-align: center;
  color: var(--white);
}

h2,
h3 {
  color: var(--navy-blue);
  font-size: 20px;
  font-weight: 500;
  line-height: 1.2;
  letter-spacing: 0.02em;
}

h2 {
  text-align: center;
  font-size: 36px;
  line-height: 1.11;
  text-transform: capitalize;
}

p {
  line-height: 1.5;
  color: var(--slate);
}

a {
  display: inline-block;
  font-weight: 500;
  color: var(--navy-blue);
}

.space {
  flex: 1;
}

.section {
  padding: 96px 0;
}

@media (min-width: 1158px) {
  .section {
    padding: 120px 0;
  }
}

.logo {
  font-family: var(--logo-fnt);
  text-transform: uppercase;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.17;
  letter-spacing: 0.03em;
  color: var(--iris);
}

.logo-light {
  color: var(--cloud);
}

.logo-dark {
  color: var(--navy-blue);
}

.socials {
  display: flex;
  gap: 16px;
}

@media (min-width: 1158px) {
  .socials {
    margin-right: 80px;
  }
}

.socials-link {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: var(--iris);
  cursor: pointer;
  transition: background-color var(--standard-transition);
}

.social-icon {
  fill: var(--cloud);
}

.socials-link:hover,
.socials-link:active,
.socials-link:focus {
  background-color: var(--green);
}

.mobile-menu .socials {
  justify-content: space-between;
}

.team-member-container .socials {
  justify-content: center;
}
/* #endregion */

/* #region Header */
.header .container {
  line-height: 1.5;
  display: flex;
  align-self: center;
  justify-content: space-between;
  padding: 16px;
}

@media (min-width: 768px) {
  .header .container {
    padding: 0 16px 0 16px;
  }
}

@media (min-width: 1158px) {
  .header .container {
    padding: 0px;
  }
}

.header {
  border-bottom: 1px solid var(--cornflower);
  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
}

.header-nav {
  display: flex;
  align-items: center;
}

.container .header-menu {
  display: none;
  align-items: center;
  gap: 40px;
}

@media (min-width: 768px) {
  .container .header-menu {
    display: flex;
  }
}

.header .logo {
  margin-right: 76px;
}

.header-item-link {
  padding: 24px 0;
  color: var(--navy-blue);
  transition: color var(--standard-transition);
}

.header-item-link.current::after {
  content: '';
  display: inline-block;
  position: absolute;
  width: 100%;
  height: 4px;
  bottom: -1px;
  left: 0;
  border-radius: 2px;
  background-color: var(--ocean);
}

.header-item-link:hover,
.header-item-link {
  position: relative;
}

.header-address-list {
  display: none;
  flex-direction: column;
  gap: 12px;
  align-items: left;
}

@media (min-width: 768px) {
  .header-address-list {
    display: flex;
  }
}

@media (min-width: 1158px) {
  .header-address-list {
    flex-direction: row;
    gap: 40px;
    align-items: center;
  }
}

.header-address-item-link {
  padding: 0;
  font-size: 12px;
  color: var(--slate);
  transition: color var(--standard-transition);
}

@media (min-width: 1158px) {
  .header-address-item-link {
    padding: 24px 0;
    font-size: 1rem;
  }
}

.header-item-link:active,
.header-item-link:focus,
.header-item-link:hover,
.header-address-item-link:hover,
.header-address-item-link:active,
.header-address-item-link:focus {
  color: var(--ocean);
}


.header .container .header-address {
  font-style: normal;
  display: flex;
  align-items: center;
}

@media (max-width: 768px) {
  .header .container .header-address {
    margin: auto 0;
  }
}

.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: none;
  flex-direction: column;
  background-color: var(--white);
  padding: 72px 24px 40px 16px;
}

.mobile-menu.is-open {
  display: flex;
}

.mobile-menu .header-item-link::after {
  display: none;
}

.mobile-menu .header-menu {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.mobile-menu .header-nav .header-item-link {
  font-size: 36px;
  font-weight: 700;
  padding: 0;
}

.mobile-menu .header-address {
  margin-bottom: 48px;
}

.mobile-menu .header-address-list {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.mobile-menu .header-address-item-link {
  font-size: 20px;
  font-weight: 500;
  font-style: normal;
  letter-spacing: 0.4px;
}
/* #endregion */

/* #region Hero */
.hero {
  max-width: 1440px;
  margin: 0 auto;
  padding: 72px 52px;
  background: var(--navy-blue);
  background-image: linear-gradient(
      to bottom,
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url('../images/hero-background_320.jpg');
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
}
/* ... */

